--- a/static/index.html
+++ b/static/index.html
@@ -5,13 +5,16 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap" rel="stylesheet">
   <title>Faxender</title>
   <style>
     html, body { margin: 0; padding: 0; }
     * { font-family: helvetica; box-sizing: border-box; }
-    .wrapper, #messages { width: 100%; max-width: 400px; margin: 1em auto; background: #f3f3f3; padding: 1em; }
+    .wrapper { width: 100%; max-width: 400px; margin: 1em auto; background: #f3f3f3; padding: 1em; }
     .wrapper.loading { filter: opacity(0.5); pointer-events: none; }
-    h2 { margin: 0 0 1.5em 0; }
+    h1 { margin: -20px 0 20px 0; font-family: 'Shizuru', cursive; font-size: 3em}
     label { display: block; margin-bottom: 1em; }
     textarea { display: block; margin: 0 0 1em; width: 100%; padding: .5em; font-size: .9em; border: 1px solid #ccc; border-radius: 3px; }
     .actions { display: flex; justify-content: space-between; align-items: center; }
@@ -19,10 +22,7 @@
     #result { font-size: .8em; color: #999; }
     #alias { color: #777; margin-left: .5em; }
     #error { margin: 1em 0 0 0; color: red; }
-    #messages { background: transparent; padding: 0; }
-    #messages .message h5 { margin: 0 0 .3em 0; font-weight: normal; }
-    #messages .message p { margin: 0; white-space: pre; font-size: .9em; padding-bottom: 1em; }
-    #messages .message p::after { content: ''; display: block; width: 3em; border-bottom: 1px solid #ccc; height: 1em; }
+    .button-box { display: flex; justify-content: space-between; width: 100%; }
   </style>
 </head>
 <body>
@@ -84,12 +84,14 @@
   })
 </script>
 <div class="wrapper" id="wrapper">
-  <h2>Send a message</h2>
+  <header>
+    <h1>Faxenger!</h1>
+  </header>
   <form action="javascript:send();">
     <label for="text">Write your message</label>
     <textarea name="text" id="text" rows="10"></textarea>
     <div class="actions">
-      <div>
+      <div class="button-box">
         <button type="button" onclick="send()" id="btn">Send</button>
         <small id="alias"></small>
       </div>
@@ -98,6 +100,5 @@
     <div id="error"></div>
   </form>
 </div>
-<div id="messages"></div>
 </body>
 </html>
