--- a/static/set_recipient_page.html
+++ b/static/set_recipient_page.html
@@ -5,22 +5,64 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Set recipient name</title>
+  <title>Set who you are</title>
   <style>
     html, body { margin: 0; padding: 0; }
     * { font-family: helvetica; box-sizing: border-box; }
     .wrapper { width: 100%; max-width: 400px; margin: 1em auto; background: #f3f3f3; padding: 1em; }
     h2 { margin: 0 0 1.5em 0; }
     label { display: block; margin-bottom: 1em; }
+    .error-text  { color: orangered; text-decoration: underline; }
     input { display: block; margin: 0 0 1em; width: 100%; padding: .5em; font-size: 1.1em; border: 1px solid #ccc; border-radius: 3px; }
-    button { display: inline-block; border-radius: .3em; background: aquamarine; padding: .5em 1em; cursor: pointer; font-size: 1em}
+    button { display: inline-block; border-radius: .3em; background: aquamarine; padding: .5em 1em; cursor: pointer; font-size: 1em; margin-top: 2em; }
+    #results { list-style: none; margin: 0; padding: 0; border-top: 1px solid #ccc; }
+    #results li { display: flex; align-items: center; border-bottom: 1px solid #ccc; }
+    #results li input { flex: 1; margin: 0; width: 1em; height: 1em; border: 1px solid #ccc; border-radius: 0; }
+    #results li label { flex: 10; margin: 0; padding: 10px 0 10px 5px; color: #333; }
+    body.loading {
+      filter: blur(2px);
+    }
+    body.loading .wrapper {
+      opacity: .5;
+    }
   </style>
 </head>
-<body>
+<body class="loading">
 <script>
-  const setAlias = () => {
-    const alias = document.getElementById('recipient').value;
-    fetch(`/set-recipient`, {
+  const setLoading = (loading) => document.querySelector('body').className = loading ? 'loading' : '';
+  const getClients = async () => {
+    const clients = await fetch(`/clients`, {
+      method: 'GET',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+    }).then(res => res.json());
+    if (clients && clients.length > 0) {
+      // Clients found
+      document.getElementById('clients_list').innerHTML = `
+        <ul id="results">
+          ${clients.map(client => `
+            <li>
+              <input value="${client.name}" name="alias" type="radio" id="${client.addr}" />
+              <label for="${client.addr}">${client.name}</label>
+            </li>
+          `).join('')}
+        </ul>
+        <button>Save</button>
+      `;
+    } else {
+      // No clients found
+      document.getElementById('clients_list').innerHTML = `
+        <h4 class="error-text">⚠ No connected Faxenger boxes ⚠</h4>
+        <p>Please make sure the <strong>Faxenger</strong> box is switched on and in a good position to connect to the local WiFI</p>
+        <button onclick="window.location.href = '/'">Try again</button>
+      `;
+    }
+    setLoading(false);
+  }
+  const setAlias = (alias) => {
+    setLoading(true);
+    fetch(`/set-alias`, {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
@@ -28,17 +70,38 @@
       redirect: 'follow',
       body: JSON.stringify({ alias })
     })
-      .then(() => window.location.href = '/')
-      .catch(e => alert(e.message));
+      .then(async (res) => {
+        if (res.status >= 300) {
+          const {error} = await res.json();
+          alert(`${res.statusText} error: ${error}`)
+        } else {
+          window.location.href = '/';
+        }
+      })
+      .catch(e => alert(e.message))
+      .then(() => setLoading(false));
   }
-  window.addEventListener('load', () => document.getElementById('recipient').focus())
+  window.addEventListener('load', () => {
+    getClients();
+    const form = document.querySelector('form');
+    form.addEventListener('submit', (event) => {
+      event.preventDefault();
+      const alias = form.elements.alias.value;
+      setAlias(alias);
+    });
+  })
 </script>
 <div class="wrapper">
-  <form action="javascript:setAlias()">
-    <h2>Set your name</h2>
-    <label for="recipient">Set recipient name (single word)</label>
-    <input type="text" id="recipient" />
-    <button type="button" onclick="setAlias()">SET</button>
+  <form>
+<!--    <h2>Set your name</h2>-->
+<!--    <label for="recipient">Set recipient name (single word)</label>-->
+<!--    <input type="text" id="recipient" />-->
+<!--    <button type="button" onclick="setAlias()">SET</button>-->
+
+    <h2>Who are you?</h2>
+    <div id="clients_list">
+      loading ...
+    </div>
   </form>
 </div>
 </body>
