--- a/static/index.html
+++ b/static/index.html
@@ -1,166 +1,243 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap" rel="stylesheet">
-  <title>Faxender</title>
-  <style>
-    html, body { margin: 0; padding: 0; }
-    * { font-family: helvetica; box-sizing: border-box; }
-    .wrapper { width: 100%; max-width: 400px; margin: 1em auto; background: #f3f3f3; padding: 1em; }
-    .wrapper.loading { filter: opacity(0.5); pointer-events: none; }
-    h1 { margin: -20px 0 20px 0; font-family: 'Shizuru', cursive; font-size: 3em}
-    label { display: block; margin-bottom: 1em; }
-    textarea { display: block; margin: 0 0 0; width: 100%; padding: .5em .5em 30px; font-size: .9em; border: 1px solid #ccc; border-radius: 3px; }
-    .buttons { margin: 0 0 1em; background: #ccc; border-bottom-left-radius: 2px; border-bottom-right-radius: 2px; position: relative; top: -1px;padding: 0 4px; }
-    .buttons button { border: 0; background: #000; color: #fff; padding: 4px 5px; font-weight: bold; text-transform: uppercase; display: inline-block; border-radius: 0; }
-    .actions { display: flex; justify-content: space-between; align-items: center; }
-    button { display: inline-block; border-radius: .3em; background: aquamarine; padding: .5em 1em; cursor: pointer; font-size: 1em}
-    #alias { color: #777; margin-left: .5em; }
-    #error { margin: 1em 0 0 0; color: red; }
-    .button-box { display: flex; justify-content: space-between; width: 100%; }
-    #image_previewer { width: 100%; }
-  </style>
-</head>
-<body>
-<script>
-  let imageToUpload;
-  const setError = (errorText) => {
-    const errorEl = document.getElementById('error');
-    errorEl.innerText = errorText;
-  }
-  const setLoading = (loading) => {
-    const wrapper = document.getElementById('wrapper');
-    const btn = document.getElementById('btn');
-    if (loading) {
-      wrapper.classList.add('loading');
-      btn.innerText = 'Sending ...';
-    } else {
-      wrapper.classList.remove('loading');
-      btn.innerText = 'Send';
-    }
-  }
-  const send = () => {
-    // TO BE FINISHED
-    if (imageToUpload) {
-      // Need to send image
-      const formData = new FormData()
-      formData.append('myFile', imageToUpload);
-      fetch('/image', {
-        method: 'POST',
-        body: formData
-      })
-      // fetch(`/image`, {
-      //   method: 'POST',
-      //   headers: {
-      //     'Content-Type': 'application/json'
-      //   },
-      //   redirect: 'follow',
-      //   body: JSON.stringify({ image: imageToUpload })
-      // });
-      return;
-    }
-    document.getElementById('result').innerText = '';
-    setError('');
-    setLoading(true);
-    const message = document.getElementById('text').value;
-    fetch(`/message`, {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      redirect: 'follow',
-      body: JSON.stringify({ message })
-    })
-    .then(res => {
-      if (res.status === 200) {
-        document.getElementById('text').value = '';
-        setError('');
-      } else {
-        console.log(`Set error to`, res.statusText);
-        setError(res.statusText);
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap"
+      rel="stylesheet"
+    />
+    <title>Faxender</title>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
       }
-    })
-    .catch(e => setError(e.message))
-    .then(() => setLoading(false));
-  }
-  window.cookieStore.get('alias').then(c => {
-    if (c && c.value && c.value.length > 0) {
-      document.getElementById('alias').innerText = `(as ${c.value})`;
-    }
-  });
-
-  const tag = (tagName) => (e) => {
-    e.preventDefault();
-    e.stopPropagation();
-
-    const field = document.getElementById('text');
-    const start = field.selectionStart;
-    const end = field.selectionEnd;
-    let text = field.value;
-
-    field.value = `${text.substring(0, start)}<${tagName}>${text.substring(start, end)}</${tagName}>${text.substring(end)}`;
-  }
-
-  window.addEventListener('load', () => {
-    const textArea = document.getElementById('text');
-    textArea.focus();
-    textArea.onkeyup = (e) => {
-      if (e.key === 'Enter' && e.ctrlKey === true) {
-        send();
+      * {
+        font-family: helvetica;
+        box-sizing: border-box;
       }
-    }
-    document.getElementById('boldBtn').addEventListener('mousedown', tag('b'));
-    document.getElementById('highlightBtn').addEventListener('mousedown', tag('h'));
-
-    document.querySelector('input[type="file"]').addEventListener('change', function() {
-      if (this.files && this.files[0]) {
-        const file = this.files[0];
-        const reader = new FileReader();
-        reader.onload = function () {
-          const base64String = reader.result.replace("data:", "").replace(/^.+,/, "");
-          console.log(base64String);
-          // imageToUpload = base64String;
-          imageToUpload = file;
+      .wrapper {
+        width: 100%;
+        max-width: 400px;
+        margin: 1em auto;
+        background: #f3f3f3;
+        padding: 1em;
+      }
+      .wrapper.loading {
+        filter: opacity(0.5);
+        pointer-events: none;
+      }
+      h1 {
+        margin: -20px 0 20px 0;
+        font-family: "Shizuru", cursive;
+        font-size: 3em;
+      }
+      label {
+        display: block;
+        margin-bottom: 1em;
+      }
+      textarea {
+        display: block;
+        margin: 0 0 0;
+        width: 100%;
+        padding: 0.5em 0.5em 30px;
+        font-size: 0.9em;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+      }
+      .buttons {
+        margin: 0 0 1em;
+        background: #ccc;
+        border-bottom-left-radius: 2px;
+        border-bottom-right-radius: 2px;
+        position: relative;
+        top: -1px;
+        padding: 0 4px;
+      }
+      .buttons button {
+        border: 0;
+        background: #000;
+        color: #fff;
+        padding: 4px 5px;
+        font-weight: bold;
+        text-transform: uppercase;
+        display: inline-block;
+        border-radius: 0;
+      }
+      .actions {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      button {
+        display: inline-block;
+        border-radius: 0.3em;
+        background: aquamarine;
+        padding: 0.5em 1em;
+        cursor: pointer;
+        font-size: 1em;
+      }
+      #alias {
+        color: #777;
+        margin-left: 0.5em;
+      }
+      #error {
+        margin: 1em 0 0 0;
+        color: red;
+      }
+      .button-box {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+      }
+      #image_previewer {
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <script>
+      let imageToUpload;
+      const setError = (errorText) => {
+        const errorEl = document.getElementById("error");
+        errorEl.innerText = errorText;
+      };
+      const setLoading = (loading) => {
+        const wrapper = document.getElementById("wrapper");
+        const btn = document.getElementById("btn");
+        if (loading) {
+          wrapper.classList.add("loading");
+          btn.innerText = "Sending ...";
+        } else {
+          wrapper.classList.remove("loading");
+          btn.innerText = "Send";
         }
-        reader.readAsDataURL(file);
+      };
+      const send = (overrideMessage) => {
+        document.getElementById("result").innerText = "";
+        setError("");
+        setLoading(true);
+        const message =
+          overrideMessage || document.getElementById("text").value;
+        fetch(`/message`, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          redirect: "follow",
+          body: JSON.stringify({ message }),
+        })
+          .then((res) => {
+            if (res.status === 200) {
+              if (!overrideMessage) {
+                document.getElementById("text").value = "";
+              }
+              setError("");
+            } else {
+              console.log(`Set error to`, res.statusText);
+              setError(res.statusText);
+            }
+          })
+          .catch((e) => setError(e.message))
+          .then(() => setLoading(false));
+      };
+      const getCookie = (name) => {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) return parts.pop().split(";").shift();
+      };
 
-        const img = document.querySelector('#image_previewer');
-        img.onload = () => URL.revokeObjectURL(img.src);
-        img.src = URL.createObjectURL(file); // set src to blob url
-      }
-    })
-  });
-</script>
-<div class="wrapper" id="wrapper">
-  <header>
-    <h1>Faxenger!</h1>
-  </header>
-  <form action="javascript:send();">
-    <label for="text">Write your message</label>
-    <textarea name="text" id="text" rows="10"></textarea>
-    <div class="buttons">
-      <button id="boldBtn" type="button">B</button>
-      <button id="highlightBtn" type="button">H</button>
+      const blinkBell = (btn) => {
+        btn.disabled = true;
+        let active = false;
+        const originalBg = btn.style.background;
+
+        const interval = setInterval(() => {
+          active = !active;
+          btn.style.background = active ? "red" : "#fff";
+        }, 500);
+
+        setTimeout(() => {
+          clearInterval(interval);
+          btn.style.background = "#fff"; // Restore white
+          btn.disabled = false;
+        }, 10000);
+      };
+
+      window.addEventListener("load", () => {
+        const textArea = document.getElementById("text");
+        textArea.focus();
+        textArea.onkeyup = (e) => {
+          if (e.key === "Enter" && e.ctrlKey === true) {
+            send();
+          }
+        };
+
+        const alias = getCookie("alias");
+        if (alias) {
+          const aliasEl = document.getElementById("alias");
+          if (aliasEl) aliasEl.innerText = `(as ${alias})`;
+        }
+      });
+    </script>
+    <div class="wrapper" id="wrapper">
+      <header>
+        <h1>Faxenger!</h1>
+      </header>
+      <form action="javascript:send();">
+        <label for="text">Write your message</label>
+        <textarea name="text" id="text" rows="10"></textarea>
+
+        <!--    <div>-->
+        <!--      <input type="file" />-->
+        <!--      <img id="image_previewer" />-->
+        <!--    </div>-->
+        <div class="actions">
+          <div class="button-box">
+            <div>
+              <button type="button" onclick="send()" id="btn">Send</button>
+              <small id="alias"></small>
+            </div>
+            <button
+              type="button"
+              onclick="send('>blink'); blinkBell(this)"
+              style="
+                border-radius: 50%;
+                padding: 8px;
+                line-height: 0;
+                background: #fff;
+                border: 1px solid #ccc;
+                cursor: pointer;
+              "
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+              </svg>
+            </button>
+          </div>
+          <div id="result"></div>
+        </div>
+        <div id="error"></div>
+      </form>
     </div>
-<!--    <div>-->
-<!--      <input type="file" />-->
-<!--      <img id="image_previewer" />-->
-<!--    </div>-->
-    <div class="actions">
-      <div class="button-box">
-        <button type="button" onclick="send()" id="btn">Send</button>
-        <small id="alias"></small>
-      </div>
-      <div id="result"></div>
-    </div>
-    <div id="error"></div>
-  </form>
-</div>
-</body>
+  </body>
 </html>
